# Projects

Projects/: tictactoe.html
Projects/Budget Expense Tracker UPDATED/: .env.example  .gitignore  README.md  package.json  server.js
Projects/Budget Expense Tracker UPDATED/DBScripts/: schema.sql
Projects/Budget Expense Tracker UPDATED/config/: passport.js
Projects/Budget Expense Tracker UPDATED/middleware/: auth.js
Projects/Budget Expense Tracker UPDATED/public/styles/: main.css
Projects/Budget Expense Tracker UPDATED/routes/: assets.js  auth.js  expenses.js  finance.js  incomes.js  liabilities.js
Projects/Budget Expense Tracker UPDATED/views/: assets.ejs  assettypes.ejs  configuration.ejs  createnewuser.ejs  edituserdetails.ejs  expenses.ejs  expensetypes.ejs  finance.ejs  financebreakdowns.ejs  financecols.ejs  incomes.ejs  incometypes.ejs  index.ejs  liabilities.ejs  liabilitytypes.ejs  modifyscreenpermissions.ejs
Projects/checkers-game/: index.html  style.css
Projects/checkers-game/js/: engine.js  game.js
Projects/chess-game/: index.html  style.css
Projects/chess-game/js/: ai.js  engine.js  game.js
Projects/fps-game/: CMakeLists.txt  build.bat  do_build.ps1
Projects/fps-game/src/: player.cpp  weapon.cpp  weapon.h
